[package]
name = "rc-hashmap"
version = "0.1.0"
edition = "2021"
description = "A HashMap with reference-counted key-value entries."
license = "Apache-2.0"
readme = "README.md"
keywords = ["hashmap", "rc", "reference-counted", "shared", "data-structures"]
categories = ["data-structures"]
documentation = "https://docs.rs/rc-hashmap"

[lib]
path = "src/lib.rs"

[dependencies]
slotmap = "1"
hashbrown = { version = "0.14", features = ["raw"] }

[dev-dependencies]
criterion = "0.5"

[features]
# Internal benchmarking hook: exposes HandleHashMap for benches only.
bench_internal = []

[[bench]]
name = "rc_hashmap_bench"
harness = false

[[bench]]
name = "handle_hashmap_bench"
harness = false
required-features = ["bench_internal"]
